--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -77,6 +77,28 @@ nav {
   transition: transform 0.3s ease-in-out;
 }
 
+#menu-links {
+  display: none;
+  flex-direction: column;
+  padding: 10px;
+  text-align: center;
+  background-color: #f9f0df;
+  position: absolute;
+  top: 70px;
+  left: 0;
+  right: 0;
+  border-radius: 5px;
+  transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
+  opacity: 0;
+  transform: translateY(-20px);
+}
+
+#menu-links.active {
+  display: flex;
+  opacity: 1;
+  transform: translateY(0);
+}
+
 .nav-links li {
   margin-right: 20px;
   margin-left: 20px;
